# Pdf_QA_Rag_system

./: LICENSE  README.md  main.py  pyproject.toml  run_test.py
app/chunking/: chunk_pipline.py
app/data/processed/: AI Engineering.md  Hands-On Large Language Models Language Understanding and Generation (Jay Alammar, Maarten Grootendorst) (Z-Library).md  IoT_3.md  IoT_7.md  ml_ebook.md
app/ingestion/: pdf_loader.py
app/test/test_input/: sample.md
app/test/test_output/: sample.json
