[project]
name = "rag-qa-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-core>=1.4.0",
    "langchain-experimental>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "pandas>=3.0.3",
    "pymupdf4llm>=1.27.2.3",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.5.1",
]
